# MusicReleaseAlert

./: .gitignore  .pre-commit-config.yaml  README.md  SpotifyAlert.py  SpotifyAlertFR.py  alert_spotify.py  artistes.py  gen_twitter_key.py  pyproject.toml
musicreleasealert/: __init__.py  artists.py
