[tool.poetry]
name = "musicreleasealert"
version = "0.1.0"
description = "Bot that announces on x.com the release of the latest single/album from a specific list of MusicRelease artists."
authors = ["Marc Dubois <marc@marcdubois.fr>"]
readme = "README.md"

[tool.poetry.scripts]
MusicReleaseAlert = "musicreleasealert:main"

[tool.poetry.dependencies]
python = "^3.11"
requests-oauthlib = "^1.3.1"
logging = "^0.4.9.6"
spotipy = "^2.23.0"
configparser = "^7.0.0"
tweepy = "^4.14.0"
twitter-text-parser = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
